--- a/src/app/admin/filament/filament.component.html
+++ b/src/app/admin/filament/filament.component.html
@@ -7,7 +7,7 @@
                         [routerLink]="['/admin']">
                     Αρχική
                 </button>
-                <button class="btn btn-success ml-3"
+                <button class="btn btn-success ml-2 ml-md-3"
                         [routerLink]="['/admin/shipments']">
                     Όλες οι Αποστολές
                 </button>
