--- a/src/app/home/profile/profile.component.html
+++ b/src/app/home/profile/profile.component.html
@@ -102,7 +102,7 @@
                     </div>
                 </div>
                 <div class="form-group col-md-6">
-                    <label for="batchRequiredTime">Απαιτούμενος χρόνος εκτύπωσης 1 μάσκας (λεπτά)</label>
+                    <label for="batchRequiredTime">Απαιτούμενος χρόνος εκτύπωσης 1 μάσκας (σε λεπτά)</label>
                     <input type="number"
                            min=0
                            pattern="^[0-9]+$"
