--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -82,7 +82,7 @@
                             </div>
                         </div>
                         <div class="form-group col-md-6 text-center">
-                            <label for="batchRequiredTime">Απαιτούμενος χρόνος εκτύπωσης 1 μάσκας</label>
+                            <label for="batchRequiredTime">Απαιτούμενος χρόνος εκτύπωσης 1 μάσκας <br/> (σε λεπτά)</label>
                             <input type="number"
                                    pattern="^[0-9]+$"
                                    name="batchRequiredTime"
