--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -29,25 +29,28 @@
                             <div *ngIf="f.password.errors.required">Password is required</div>
                         </div>
                     </div>
-                    <div class="button-group d-flex justify-content-between">
-                        <div>
+                    <div class="button-group col-12 px-0 d-md-flex align-items-center">
+                        <div class="col-12 px-0 mb-3 pt-3 py-3 col-md-2 p-md-0 m-md-0">
                             <button [disabled]="loading"
-                                    class="btn btn-primary"
+                                    class="btn btn-primary col-12 p-md-2"
                                     type="submit">
                                 <span *ngIf="loading"
-                                      class="spinner-border spinner-border-sm mr-1"></span>
+                                      class="spinner-border spinner-border-sm"></span>
                                 Login
                             </button>
-                            <button class="btn btn-info ml-3"
+                        </div>
+                        <div class="col-12 px-0 text-center col-md-10 flex-md-grow-1 d-flex justify-content-between align-items-center">
+                            <button class="btn btn-info col-5 p-2 m-0 col-md-3 ml-md-3"
                                     (click)="onRegister()"
                                     type="button">
                                 Register
                             </button>
+                            <button class="btn btn-success ml-2 col-6 p-0 m-0 col-md-5 p-md-2"
+                                    [routerLink]="['/guide']">
+                                Οδηγός Εκτύπωσης
+                            </button>
                         </div>
-                        <button class="btn btn-success"
-                                [routerLink]="['/guide']">
-                            Οδηγός Εκτύπωσης
-                        </button>
+
                     </div>
                     <div *ngIf="error"
                          class="alert alert-danger mt-3 mb-0">{{error}}</div>
