--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,7 +18,7 @@
              class="spinner-border spinner-border-sm"></div>
         <ng-template #shipmentStatus>
             <p *ngIf="currentUser">
-                Γεία σου {{currentUser.firstName}}!
+                Γειά σου {{currentUser.firstName}}!
             </p>
             <p *ngIf="currentUser.needsFilament else filament"
                class="text-success">
