--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@
 @import '../node_modules/material-design-icons/iconfont/material-icons.css';
 @import '../node_modules/@angular/material/prebuilt-themes/indigo-pink.css';
 @import "~bootstrap/scss/bootstrap";
+@import '~ngx-toastr/toastr';
 
 a {
   cursor: pointer
@@ -130,4 +131,26 @@ input[type=time]::-webkit-clear-button {
 
 .cdk-overlay-pane {
   overflow-y: auto;
+}
+
+.toast-top-right {
+  top: 70px;
+}
+
+.toast-container .ngx-toastr {
+  padding: 5px 15px 0px 15px;
+}
+
+.toast-success {
+  background-image: none;
+}
+
+.toast-title {
+  padding-bottom: 10px;
+  font-weight: bold;
+  font-size: x-large;
+  text-align: center;
+  border: white;
+  border-width: 4px;
+  border-bottom-style: solid;
 }
