--- a/src/app/admin/filament/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/admin/filament/confirm-dialog/confirm-dialog.component.html
@@ -26,21 +26,30 @@
 <form [formGroup]="filamentForm">
     <div mat-dialog-content
          class="col-12 mt-2 ml-0 p-0 text-center">
-        <mat-form-field class="mr-0 py-0">
+        <mat-form-field class="mr-0 py-0 col-12 col-md-4">
             <mat-label>Tracking Number</mat-label>
             <input matInput
-                   [(ngModel)]="data.filamentTrackingNumber"
                    formControlName="filamentTrackingNumber">
             <!-- <mat-error *ngIf="f.filamentTrackingNumber.hasError('required')">
                 Tracking Number is <strong>required</strong>
             </mat-error> -->
         </mat-form-field>
-        <mat-form-field class="ml-md-4">
+        <mat-form-field class="mr-0 py-0 col-4 col-md-2">
+            <mat-label>Kg</mat-label>
+            <input matInput
+                   required
+                   min="1"
+                   type="number"
+                   formControlName="filamentAmountRecieved">
+            <mat-error *ngIf="f.filamentAmountRecieved.hasError('required')">
+                Amount of Filament is <strong>required</strong>
+            </mat-error>
+        </mat-form-field>
+        <mat-form-field class="ml-md-4 col-8 col-md-4">
             <mat-label>Ημερ/νια Αποστολής</mat-label>
             <input matInput
                    [matDatepicker]="picker"
                    required
-                   [(ngModel)]="data.sentFilamentDate"
                    formControlName="sentFilamentDate">
             <mat-datepicker-toggle matSuffix
                                    [for]="picker"></mat-datepicker-toggle>
@@ -59,6 +68,7 @@
         <button mat-button
                 class="btn btn-danger ml-3"
                 type="submit"
+                (click)="onSubmit()"
                 [disabled]="!filamentForm.valid"
                 [mat-dialog-close]="data">
             <i class="material-icons material-action align-text-top text-light">
