--- a/src/app/admin/users/view/view.component.html
+++ b/src/app/admin/users/view/view.component.html
@@ -12,19 +12,34 @@
         <hr />
         <form>
             <div class="form-row col-12">
-                <div class="form-group col-md-6">
+                <div class="form-group col-md-4">
                     <label for="firstName">Όνομα</label>
                     <input type="text"
                            disabled
                            value='{{user.firstName}}'
                            class="form-control" />
                 </div>
-                <div class="form-group col-md-6">
+                <div class="form-group col-md-4">
                     <label for="lastName">Επίθετο</label>
                     <input type="text"
                            disabled
                            value='{{user.lastName}}'
                            class="form-control">
+                </div>
+                <div class="col-md-2"></div>
+                <div class="form-group input-group col-md-2">
+                    <div class="">
+                        <label for="lastName">Απεσταλμένο Υλικό</label>
+                    </div>
+                    <div class="row col-md-12">
+                        <input type="number"
+                               disabled
+                               value='{{user.filamentAmountRecieved + 100}}'
+                               class="form-control text-right col-5 col-md-7">
+                        <div class="input-group-append">
+                            <span class="input-group-text">Kg</span>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="form-row col-12">
