--- a/src/app/admin/users/view/view.component.html
+++ b/src/app/admin/users/view/view.component.html
@@ -34,7 +34,7 @@
                     <div class="row col-md-12">
                         <input type="number"
                                disabled
-                               value='{{user.filamentAmountRecieved + 100}}'
+                               value='{{user.filamentAmountRecieved}}'
                                class="form-control text-right col-5 col-md-7">
                         <div class="input-group-append">
                             <span class="input-group-text">Kg</span>
