--- a/src/styles.scss
+++ b/src/styles.scss
@@ -138,6 +138,7 @@ input[type=time]::-webkit-clear-button {
 }
 
 .toast-container .ngx-toastr {
+  box-sizing: content-box;
   padding: 5px 15px 0px 15px;
 }
 
