--- a/src/app/shipment/shipment.component.html
+++ b/src/app/shipment/shipment.component.html
@@ -123,7 +123,7 @@
                             </select>
                             <div *ngIf="submitted && f.shippingCompany.errors"
                                  class="invalid-feedback">
-                                <div *ngIf="f.shippingCompany.errors.required">Ο Τρόπος Αποστολής είναι απαραίτητη</div>
+                                <div *ngIf="f.shippingCompany.errors.required">Ο Τρόπος Αποστολής είναι απαραίτητος</div>
                             </div>
                         </div>
                         <div class="form-row col-12 my-4">
