--- a/src/app/home/profile/profile.component.html
+++ b/src/app/home/profile/profile.component.html
@@ -53,24 +53,48 @@
                     </div>
                 </div>
             </div>
+            <hr />
             <div class="form-row col-12">
-                <div class="form-group col-md-12">
-                    <label for="address">Διεύθυνση αποστολής νέου χορηγούμενου υλικού*</label>
-                    <textarea formControlName="address"
-                              name="address"
-                              rows="4"
-                              class="form-control"
-                              [ngClass]="{ 'is-invalid': submitted && f.address.errors }">
-                </textarea>
-                    <div *ngIf="submitted && f.address.errors"
-                         class="invalid-feedback">
-                        <div *ngIf="f.address.errors.required">Η Περιοχή είναι απαραίτητη</div>
+                <label>Διεύθυνση αποστολής νέου χορηγούμενου υλικού</label>
+                <div class="form-row col-12 mt-3">
+                    <div class="form-group col-md-4">
+                        <label for="addressStreet">Οδός*</label>
+                        <input type="text"
+                               formControlName="addressStreet"
+                               class="form-control"
+                               [ngClass]="{ 'is-invalid': submitted && f.addressStreet.errors }" />
+                        <div *ngIf="submitted && f.addressStreet.errors"
+                             class="invalid-feedback">
+                            <div *ngIf="f.addressStreet.errors.required">Η Περιοχή είναι απαραίτητη</div>
+                        </div>
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="addressCity">Πόλη*</label>
+                        <input type="text"
+                               formControlName="addressCity"
+                               class="form-control"
+                               [ngClass]="{ 'is-invalid': submitted && f.addressCity.errors }" />
+                        <div *ngIf="submitted && f.addressCity.errors"
+                             class="invalid-feedback">
+                            <div *ngIf="f.addressCity.errors.required">Η Περιοχή είναι απαραίτητη</div>
+                        </div>
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="addressTK">Ταχυδρομικός κώδικας*</label>
+                        <input type="text"
+                               formControlName="addressTK"
+                               class="form-control"
+                               [ngClass]="{ 'is-invalid': submitted && f.addressTK.errors }" />
+                        <div *ngIf="submitted && f.addressTK.errors"
+                             class="invalid-feedback">
+                            <div *ngIf="f.addressTK.errors.required">Η Περιοχή είναι απαραίτητη</div>
+                        </div>
                     </div>
                 </div>
             </div>
             <hr />
             <div class="form-row col-12 mb-4">
-                <div class="form-check-inline col-md-12">
+                <div class="form-check-inline col-md-12 flex-column flex-md-row">
                     <label for="printerActive"
                            class="form-check-label pr-5">Είναι ο εκτυπωτής λειτουργικός?*</label>
                     <bSwitch name="printerActive"
@@ -78,7 +102,7 @@
                              [switch-size]="'small'"
                              [switch-on-text]="'ΝΑΙ'"
                              [switch-off-text]="'ΟΧΙ'"
-                             class="form-check-input"
+                             class="form-check-input mt-3"
                              id="printerActive"
                              formControlName="printerActive"></bSwitch>
                 </div>
@@ -103,9 +127,9 @@
                            name="batchRequiredTime"
                            id="batchRequiredTime"
                            formControlName="batchRequiredTime"
-                           class="form-control" 
+                           class="form-control"
                            [ngClass]="{ 'is-invalid': submitted && f.batchRequiredTime.errors }" />
-                        <div *ngIf="f.batchRequiredTime.errors">Ο αριθμός πρέπει να είναι ακέραιος</div>
+                    <div *ngIf="f.batchRequiredTime.errors">Ο αριθμός πρέπει να είναι ακέραιος</div>
                 </div>
             </div>
             <hr />
