--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -55,9 +55,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="form-row col-12">
-                        <div class="form-group col-md-12">
-                            <label for="addressStreet">Διεύθυνση αποστολής νέου χορηγούμενου υλικού*</label>
+                    <hr />
+                    <div class="form-row col-12 align-items-baseline">
+                        <label>Διεύθυνση αποστολής νέου χορηγούμενου υλικού</label>
+                        <div class="form-group col-md-4 mt-3">
+                            <label for="addressStreet">Οδός*</label>
                             <input type="text"
                                    formControlName="addressStreet"
                                    class="form-control"
@@ -67,7 +69,7 @@
                                 <div *ngIf="f.addressStreet.errors.required">Η Περιοχή είναι απαραίτητη</div>
                             </div>
                         </div>
-                        <div class="form-group col-md-6">
+                        <div class="form-group col-md-4">
                             <label for="addressCity">Πόλη*</label>
                             <input type="text"
                                    formControlName="addressCity"
@@ -78,12 +80,12 @@
                                 <div *ngIf="f.addressCity.errors.required">Η Περιοχή είναι απαραίτητη</div>
                             </div>
                         </div>
-                        <div class="form-group col-md-6">
+                        <div class="form-group col-md-4">
                             <label for="addressTK">Ταχυδρομικός κώδικας*</label>
                             <input type="text"
-                               formControlName="addressTK"
-                               class="form-control"
-                               [ngClass]="{ 'is-invalid': submitted && f.addressTK.errors }" />
+                                   formControlName="addressTK"
+                                   class="form-control"
+                                   [ngClass]="{ 'is-invalid': submitted && f.addressTK.errors }" />
                             <div *ngIf="submitted && f.addressTK.errors"
                                  class="invalid-feedback">
                                 <div *ngIf="f.addressTK.errors.required">Η Περιοχή είναι απαραίτητη</div>
@@ -116,15 +118,15 @@
                         </div>
                     </div>
                     <div class="form-row col-12">
-                        <div class="form-check-inline col-md-12">
+                        <div class="form-check-inline col-md-12 d-flex justify-content-between flex-column flex-md-row">
                             <label for="printerActive"
-                                   class="form-check-label pr-5">Είναι ο εκτυπωτής λειτουργικός?*</label>
+                                   class="form-check-label">Είναι ο εκτυπωτής λειτουργικός?*</label>
                             <bSwitch name="printerActive"
                                      [switch-animate]="'animate'"
                                      [switch-size]="'small'"
                                      [switch-on-text]="'ΝΑΙ'"
                                      [switch-off-text]="'ΟΧΙ'"
-                                     class="form-check-input"
+                                     class="form-check-input mt-3"
                                      id="printerActive"
                                      formControlName="printerActive"></bSwitch>
                         </div>
