get totals live for admin

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@
 @import '../node_modules/@swimlane/ngx-datatable/assets/icons.css';
 @import '../node_modules/material-design-icons/iconfont/material-icons.css';
 @import '../node_modules/@angular/material/prebuilt-themes/indigo-pink.css';
-@import "~bootstrap/scss/bootstrap";
+@import "../node_modules/bootstrap/scss/bootstrap";
 @import '~ngx-toastr/toastr';
 
 a {
